# seminario-algosups.github.io

./: .gitignore  README.md  _config.yml  doc-jeckyll.md  prepare_notebook.sh  pyproject.toml
Clase-01/: clase-1-intro-python.ipynb  clase-1-intro-python.md  clase-1-introducci-n-a-python.ipynb  clase-1-introducci-n-a-python.md  index.md
Clase-02/: clase-2-mas_python_datasets.ipynb  clase-2-mas_python_datasets.md  index.md  mi_libreria.py
Clase-03/: clase-3-aprendizaje-automatico.ipynb  clase-3-aprendizaje-automatico.md  clase3.ipynb  clase3.md  funciones.py  index.md
Clase-04/: Clase4.ipynb  Clase4.md  clase-4-vectorizacion.ipynb  clase-4-vectorizacion.md  funciones.py  index.md  synth_data_sentiment.csv  synth_eval_sentiment.csv
Clase-05/: Clase-5-SVM.ipynb  clase05.ipynb  clase05.md  index.md
Clase-06/: index.md
Clase-07/: clase-07.ipynb  clase-07.md  index.md  noticia1.txt  noticia2.txt
Clase-08/: clase8.ipynb  clase8.md  index.md  noticia.txt
Clase-09/: index.md
Clase-10/: index.md
Clase-11/: clase11.ipynb  clase11.md  index.md
Clase-12/: CLASE-EMBEDDINGS.tex  Similitud_TF_IDF__coseno____Ejemplo.csv  clase_similitud_ner.ipynb  clase_similitud_ner.md  index.md  ner_ejercicio.ipynb  proy-clase12.md
Clase-13/: clase-13.tex  clase13.ipynb  clase13.md  entities-2.ipynb  entities-2.md  index.md  noticia1.txt  pysentimiento.md  pysentimiento_demo.ipynb
Clase-14/: Clase-14.ipynb  Clase-14.md  build_bilou.py  entities-3.ipynb  guia_anotacion_entidades.md  index.md
Clase-15/: index.md
Clase1/: index.md
Clase2/: index.md
Clase3/: clase 3.md  (+2 more)
(+14 files in other folders)
