[project]
name = "curso_anotacion_puan"
version = "0.1.0"
description = ""
authors = [
    {name = "FSchia",email = "36175560+chafa618@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
